--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html {
+	position: relative;
+}
+body {
+	margin-bottom: 100px;
+}
+
+
 .jumbotron img {
 	width: 200px;
 	border: 5px solid 
@@ -5,4 +13,12 @@
 hr{
 	width: 250px;
 	border-top: 3px solid #111
+}
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
+	background-color: #333;
+	color: white
 }
